--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "sass-resources-loader": "^2.2.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
-  }, 
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "netlify:deploy": "netlify deploy --dir=./build -p -m \"$(git log -1 --pretty=%B)\""
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +59,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "istanbul": "^0.4.5",
+    "netlify-cli": "^2.71.0",
     "nyc": "^15.1.0",
     "postcss": "^8.4.16",
     "sass": "^1.56.1",
